Fix gradient part margin on mobile size

--- a/styles.scss
+++ b/styles.scss
@@ -201,8 +201,9 @@ main {
     }
 
     .gradient-side {
-      margin: 6%;
       padding: 20px;
+      margin-left: 16px;
+      margin-right: 16px;
     }
     .bullets .question {
       font-size: 16px;
